Added a part for ant based projects. Right now, it does not do a lot more that the custom support part, but this may change.

--- a/parts/Makefile.am
+++ b/parts/Makefile.am
@@ -7,7 +7,7 @@
 SUBDIRS = doctreeview classview appwizard outputviews grepview fileview \
 	  cppsupport pythonsupport perlsupport phpsupport fortransupport \
 	  autoproject scriptproject trollproject customproject \
-	  cvs perforce \
+	  cvs perforce antproject \
 	  debugger distpart konsole astyle tools ctags regexptest doxygen \
 	  manager fileselector visualboyadvance tipofday abbrev filter \
 	  uimode editor-chooser openwith windowmenu history \
