no need for cvscommand (moved a generic version into lib/utils)

--- a/parts/cvs/Makefile.am
+++ b/parts/cvs/Makefile.am
@@ -1,6 +1,6 @@
 # Here resides the cvs part
 
-INCLUDES = -I$(top_srcdir)/lib/interfaces $(all_includes)
+INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/util $(all_includes)
 
 kde_module_LTLIBRARIES = libkdevcvs.la
 libkdevcvs_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
@@ -8,7 +8,6 @@ libkdevcvs_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
 libkdevcvs_la_SOURCES = cvspart.cpp \
 			commitdlg.cpp \
-                        cvscommand.cpp \
 			logform.ui
 
 METASOURCES = AUTO
