--- a/parts/perforce/Makefile.am
+++ b/parts/perforce/Makefile.am
@@ -1,6 +1,6 @@
 # Here resides the cvs part
 
-INCLUDES = -I$(top_srcdir)/lib/interfaces $(all_includes)
+INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/util $(all_includes)
 
 kde_module_LTLIBRARIES = libkdevperforce.la
 libkdevperforce_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
