inserted fileproperty dialog

--- a/parts/trollproject/Makefile.am
+++ b/parts/trollproject/Makefile.am
@@ -9,6 +9,7 @@ libkdevtrollproject_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 libkdevtrollproject_la_SOURCES = caret.cpp\
                                  filebuffer.cpp\
 				 projectconfigurationdlgbase.ui \
+				 filepropertybase.ui \
 				 projectconfigurationdlg.cpp \
                                  trollprojectpart.cpp \
 				 trollprojectwidget.cpp
