--- a/parts/appwizard/kdevpart/src-Makefile.am
+++ b/parts/appwizard/kdevpart/src-Makefile.am
@@ -4,7 +4,7 @@ kde_module_LTLIBRARIES = libkdev$APPNAMELC$.la
 libkdev$APPNAMELC$_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdev$APPNAMELC$_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdev$APPNAMELC$_la_SOURCES = $APPNAMELC$_factory.cpp $APPNAMELC$_part.cpp $APPNAMELC$_widget.cpp
+libkdev$APPNAMELC$_la_SOURCES = $APPNAMELC$_part.cpp $APPNAMELC$_widget.cpp
 
 METASOURCES = AUTO
 
