put in toolbar buttons in treeview

--- a/parts/trollproject/Makefile.am
+++ b/parts/trollproject/Makefile.am
@@ -10,6 +10,7 @@ libkdevtrollproject_la_SOURCES = caret.cpp\
                                  filebuffer.cpp\
 				 projectconfigurationdlgbase.ui \
 				 filepropertybase.ui \
+				 filepropertydlg.cpp \
 				 projectconfigurationdlg.cpp \
                                  trollprojectpart.cpp \
 				 trollprojectwidget.cpp
