--- a/configure.in.in
+++ b/configure.in.in
@@ -6,6 +6,7 @@ KDE_NEED_FLEX
 KDEV_CHECK_DOCBASE
 KDEV_CHECK_SCRIPTING
 KDEV_CHECK_JAVA
+KDEV_CHECK_SVN
 KDEV_PATH_PYTHONDOCDIR
 KDEV_PATH_PHPDOCDIR
 KDEV_PATH_GNUSTEPDOCDIR
