--- a/src/gideonui.rc
+++ b/src/gideonui.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui >
-<kpartgui version="3" name="gideon" >
+<kpartgui version="4" name="gideon" >
 <MenuBar>
   <Menu name="file" noMerge="1"><text>&amp;File</text>
     <Action name="file_new"/>
@@ -66,15 +66,16 @@
     <text>&amp;Tools</text>
     <Merge/>
   </Menu>
-  <Menu name="settings">
+  <Menu name="settings" noMerge="1">
     <text>&amp;Settings</text>
-    <Action name="toolbars_showhide"/>
-    <DefineGroup name="show_toolbar_merge"/>
-    <Separator/>
-    <Action name="settings_configure_shortcuts"/>
-    <Action name="settings_configure_toolbars"/>
-    <Action name="settings_configure"/>
-    <DefineGroup name="configure_merge"/>
+    <Action name="settings_show_menubar" />
+    <Merge name="StandardToolBarMenuHandler" />
+    <DefineGroup name="show_merge" />
+    <Separator />
+    <Action name="settings_configure_shortcuts" />
+    <Action name="settings_configure_toolbars" />
+    <Action name="settings_configure" />
+    <DefineGroup name="configure_merge" />
   </Menu>
   <Menu name="help" append="about_merge">
     <text>&amp;Help</text>
