New project run options widget

--- a/parts/trollproject/Makefile.am
+++ b/parts/trollproject/Makefile.am
@@ -9,10 +9,12 @@ libkdevtrollproject_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 libkdevtrollproject_la_SOURCES = caret.cpp\
                                  filebuffer.cpp\
 				 projectconfigurationdlgbase.ui \
+				 projectrunoptionsdlgbase.ui \
 				 filepropertybase.ui \
 				 filepropertydlg.cpp \
 				 projectconfigurationdlg.cpp \
-                                 trollprojectpart.cpp \
+				 projectrunoptionsdlg.cpp \
+				 trollprojectpart.cpp \
 				 trollprojectwidget.cpp
 
 
