Split file groups into separate part

--- a/parts/fileview/Makefile.am
+++ b/parts/fileview/Makefile.am
@@ -5,21 +5,27 @@ INCLUDES = -I$(top_srcdir)/lib/interfaces \
 	   -I$(top_srcdir)/lib/util \
 	   $(all_includes)
 
-kde_module_LTLIBRARIES = libkdevfileview.la
+kde_module_LTLIBRARIES = libkdevfileview.la libkdevfilegroups.la
+
 libkdevfileview_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevfileview_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
+libkdevfilegroups_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
+libkdevfilegroups_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
+
 libkdevfileview_la_SOURCES = fileviewpart.cpp \
-			     filetreewidget.cpp \
-			     filegroupswidget.cpp \
+			     filetreewidget.cpp
+                             
+libkdevfilegroups_la_SOURCES = filegroupswidget.cpp \
 			     addfilegroupdlg.cpp \
 			     filegroupsconfigwidget.cpp \
-			     filegroupsconfigwidgetbase.ui
+			     filegroupsconfigwidgetbase.ui \
+			     filegroupspart.cpp
 
 METASOURCES = AUTO
 
 servicedir = $(kde_servicesdir)
-service_DATA = kdevfileview.desktop
+service_DATA = kdevfileview.desktop kdevfilegroups.desktop
 
 # not used currently
 #rcdir = $(kde_datadir)/kdevfileview
