--- a/parts/appwizard/kcmodule/src-Makefile.am
+++ b/parts/appwizard/kcmodule/src-Makefile.am
@@ -9,4 +9,4 @@ kcm_$APPNAMELC$_la_LIBADD = $(LIB_KDEUI)
 kcm_$APPNAMELC$_la_LDFLAGS = -module -avoid-version $(all_libraries) -no-undefined
 
 $APPNAMELC$_DATA = $APPNAMELC$.desktop
-$APPNAMELC$dir = $(kde_appsdir/Settings/$APPNAME$
+$APPNAMELC$dir = $(kde_appsdir)/Settings/$APPNAME$
