--- a/src/gideonui.rc
+++ b/src/gideonui.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui >
-<kpartgui version="4" name="gideon" >
+<kpartgui version="5" name="gideon" >
 <MenuBar>
   <Menu name="file" noMerge="1"><text>&amp;File</text>
     <Action name="file_new"/>
@@ -74,6 +74,7 @@
     <Separator />
     <Action name="settings_configure_shortcuts" />
     <Action name="settings_configure_toolbars" />
+    <Action name="settings_configure_notifications" />
     <Action name="settings_configure" />
     <DefineGroup name="configure_merge" />
   </Menu>
