--- a/parts/appwizard/Makefile.am
+++ b/parts/appwizard/Makefile.am
@@ -1,8 +1,9 @@
+
 # Here resides the app wizard part.
 
 SUBDIRS = . imports common kapp kpartapp kpartplugin kappjava kcmodule kicker kioslave \
 	  kdevpart pythonhello phphello chello cpphello gnomeapp kdevpartjava kscreensaver \
-	  kofficepart chello_gba dcopservice konqnavpanel
+	  kofficepart chello_gba dcopservice konqnavpanel qmakesimple qmakeapp
 
 INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/sourceinfo $(all_includes)
 
