--- a/parts/appwizard/qmakesimple/Makefile.am
+++ b/parts/appwizard/qmakesimple/Makefile.am
@@ -17,4 +17,5 @@ script.local: ${srcdir}/script
 	perl -npi -e 's%^#\!.*$$%#!'${perl}' -I'${commondatadir}'%g;' script.local
 
 install-data-local: script.local
+	$(mkinstalldirs) $(DESTDIR)$(qmakesimple)
 	$(INSTALL_DATA) script.local $(DESTDIR)$(qmakesimpledir)/script
