Generate *.tar.gz at build time instead of having them in the repository. Much easier to update the files this way.
Add depcomp to incadmin.tar.gz.

--- a/parts/appwizard/common/Makefile.am
+++ b/parts/appwizard/common/Makefile.am
@@ -1,3 +1,22 @@
+admin.tar.gz:
+	tar -C $(srcdir) -cf admin.tar admin/
+	gzip admin.tar
+
+gnome.tar.gz:
+	tar -C $(srcdir)/gnome -cf gnome.tar macros/
+	gzip gnome.tar
+
+gnu.tar.gz:
+	tar -C $(srcdir)/gnu -cf gnu.tar AUTHORS  COPYING \
+		ChangeLog  INSTALL  NEWS  README  TODO
+	gzip gnu.tar
+
+incadmin.tar.gz:
+	tar -C $(srcdir)/incadmin -cf incadmin.tar acconfig.h  \
+		config.guess  config.sub  depcomp install-sh  \
+		ltconfig  ltmain.sh  missing  mkinstalldirs
+	gzip incadmin.tar
+
 appwizarddatadir = ${kde_datadir}/kdevappwizard
 commondatadir = ${appwizarddatadir}/template-common
 commondata_DATA = gideon.pm admin.tar.gz gnu.tar.gz incadmin.tar.gz gnome.tar.gz \
