--- a/configure.in.in
+++ b/configure.in.in
@@ -7,6 +7,7 @@ KDEV_CHECK_DOCBASE
 KDEV_CHECK_SCRIPTING
 KDEV_CHECK_JAVA
 KDEV_CHECK_SVN
+KDEV_CHECK_QEDITOR
 KDEV_PATH_PYTHONDOCDIR
 KDEV_PATH_PHPDOCDIR
 KDEV_PATH_GNUSTEPDOCDIR
