sigh - I'm getting old

--- a/kdevelop.m4.in
+++ b/kdevelop.m4.in
@@ -426,7 +426,7 @@ AC_DEFUN(KDEV_CHECK_QEDITOR,
     AC_MSG_RESULT(no)
   else
     AC_MSG_RESULT(yes)
-    QEDITOR_SUBDIR=editor
+    QEDITOR_SUBDIR=qeditor
   fi
 AC_SUBST(QEDITOR_SUBDIR)
 ])
