--- a/configure.in.in
+++ b/configure.in.in
@@ -1,6 +1,6 @@
 #MIN_CONFIG
 
-AM_INIT_AUTOMAKE(gideon_kdevelop, 0.2_2.x)
+AM_INIT_AUTOMAKE(gideon_kdevelop, 3.0.0)
 KDE_NEED_FLEX
 
 KDEV_CHECK_DOCBASE
