added save-all dialog to prevent thousands of "do you want to save xyz" Message-Boxes

--- a/lib/util/Makefile.am
+++ b/lib/util/Makefile.am
@@ -9,6 +9,7 @@ libkdevutil_la_SOURCES = processwidget.cpp \
 			 domutil.cpp \
 			 splitter.cpp \
 			 execcommand.cpp \
+			 ksavealldialog.cpp \
 			 filetemplate.cpp
 
 METASOURCES = AUTO
