So many "all_includes not last" popped up since I switched to kde-build (and my checking script didn't run anymore after updating).

--- a/parts/kwrite-part/Makefile.am
+++ b/parts/kwrite-part/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS = kwrite
 
-INCLUDES = $(all_includes) -I$(top_srcdir)/lib/interfaces 
+INCLUDES = -I$(top_srcdir)/lib/interfaces $(all_includes)
 METASOURCES = AUTO
 
 kde_module_LTLIBRARIES = libkwriteeditorpart.la
