--- a/parts/doctreeview/Makefile.am
+++ b/parts/doctreeview/Makefile.am
@@ -9,17 +9,7 @@ kde_module_LTLIBRARIES = libkdevdoctreeview.la kio_kdeapi.la
 libkdevdoctreeview_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevdoctreeview_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevdoctreeview_la_SOURCES = doctreeviewfactory.cpp \
-				doctreeviewpart.cpp \
-				doctreeviewwidget.cpp \
-			        doctreeconfigwidget.cpp \
-				doctreeglobalconfigwidget.cpp \
-				doctreeglobalconfigwidgetbase.ui \
-				adddocitemdlg.cpp \
-				docindexdlg.cpp \
-				docsearchdlg.cpp \
-				misc.cpp \
-				librarydocdlgbase.ui
+libkdevdoctreeview_la_SOURCES = doctreeviewfactory.cpp doctreeviewpart.cpp doctreeviewwidget.cpp doctreeglobalconfigwidget.cpp doctreeglobalconfigwidgetbase.ui adddocitemdlg.cpp docindexdlg.cpp docsearchdlg.cpp misc.cpp librarydocdlgbase.ui
 
 bin_PROGRAMS = kdevelop-htdig
 kdevelop_htdig_SOURCES = htdigindex.cpp
